--- a/multistrap.conf
+++ b/multistrap.conf
@@ -5,7 +5,8 @@ debootstrap=Debian
 aptsources=Debian
 
 [Debian]
-packages=apt kmod
+packages=apt kmod netbase net-tools ethtool iproute iputils-ping ifupdown isc-dhcp-client
 source=http://httpredir.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
+
