update to debian stretch

--- a/multistrap.conf
+++ b/multistrap.conf
@@ -5,8 +5,7 @@ debootstrap=Debian
 aptsources=Debian
 
 [Debian]
-packages=apt kmod netbase net-tools ethtool iproute iputils-ping ifupdown isc-dhcp-client vim
-source=http://httpredir.debian.org/debian
+packages=apt kmod dialog netbase net-tools ethtool iproute iputils-ping ifupdown isc-dhcp-client vim
+source=http://deb.debian.org/debian/
 keyring=debian-archive-keyring
-suite=jessie
-
+suite=stretch
