--- a/multistrap.conf
+++ b/multistrap.conf
@@ -6,6 +6,6 @@ aptsources=Debian
 
 [Debian]
 packages=apt kmod dialog netbase net-tools ethtool iproute iputils-ping ifupdown isc-dhcp-client sudo ssh avahi-daemon vim
-source=http://cdn-fastly.deb.debian.org/debian/
+source=http://deb.debian.org/debian/
 keyring=debian-archive-keyring
 suite=jessie
