--- a/multistrap.conf
+++ b/multistrap.conf
@@ -5,7 +5,7 @@ debootstrap=Debian
 aptsources=Debian
 
 [Debian]
-packages=apt kmod dialog netbase net-tools ethtool iproute iputils-ping ifupdown isc-dhcp-client sudo ssh avahi-daemon vim parted ntp
+packages=systemd systemd-sysv udev apt kmod dialog netbase net-tools ethtool iproute iputils-ping ifupdown isc-dhcp-client sudo ssh avahi-daemon vim parted ntp
 source=http://deb.debian.org/debian/
 keyring=debian-archive-keyring
-suite=jessie
+suite=stretch
