add pi64-config tool

--- a/multistrap.conf
+++ b/multistrap.conf
@@ -5,7 +5,7 @@ debootstrap=Debian
 aptsources=Debian
 
 [Debian]
-packages=systemd systemd-sysv udev apt debconf-utils kmod dialog locales netbase net-tools ethtool iproute iputils-ping ifupdown isc-dhcp-client sudo ssh avahi-daemon vim parted ntp
+packages=systemd systemd-sysv udev apt kmod dialog locales netbase net-tools ethtool iproute iputils-ping ifupdown isc-dhcp-client sudo ssh avahi-daemon parted ntp
 source=http://deb.debian.org/debian/
 keyring=debian-archive-keyring
 suite=stretch
