--- a/goss.yaml
+++ b/goss.yaml
@@ -26,8 +26,8 @@ file:
 interfaces:
     eth0:
       exists: true
-    #wlan0:
-      #exists: true
+    wlan0:
+      exists: true
 
 package:
   systemd:
