--- a/goss.yaml
+++ b/goss.yaml
@@ -18,6 +18,8 @@ mount:
     filesystem: sysfs
 
 file:
+  /dev/vchiq:
+    exists: true
   /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor:
     exists: true
     contains:
