switch from dhclient to dhcpcd

--- a/multistrap.conf
+++ b/multistrap.conf
@@ -5,7 +5,7 @@ debootstrap=Debian
 aptsources=Debian
 
 [Debian]
-packages=systemd systemd-sysv udev apt kmod dialog locales netbase net-tools ethtool iproute iputils-ping ifupdown isc-dhcp-client firmware-brcm80211 wpasupplicant sudo ssh avahi-daemon parted ntp
+packages=systemd systemd-sysv udev apt kmod dialog locales netbase net-tools ethtool iproute iputils-ping ifupdown dhcpcd5 firmware-brcm80211 wpasupplicant sudo ssh avahi-daemon parted ntp
 source=http://deb.debian.org/debian/
 keyring=debian-archive-keyring
 components=main non-free
