--- a/multistrap.conf
+++ b/multistrap.conf
@@ -1,12 +1,26 @@
 [General]
 noauth=true
 unpack=true
-debootstrap=Debian
+debootstrap=Debian Net Setup Config
 aptsources=Debian
 
 [Debian]
-packages=systemd systemd-sysv udev apt kmod dialog locales netbase net-tools ethtool iproute iputils-ping ifupdown dhcpcd5 firmware-brcm80211 wpasupplicant sudo ssh avahi-daemon parted ntp
+# Base packages
+packages=systemd systemd-sysv udev apt kmod locales sudo
 source=http://deb.debian.org/debian/
 keyring=debian-archive-keyring
 components=main non-free
 suite=stretch
+
+[Net]
+# Networking packages
+packages=netbase net-tools ethtool iproute iputils-ping ifupdown dhcpcd5 firmware-brcm80211 wpasupplicant ssh avahi-daemon ntp
+
+[Setup]
+# Packages required to finalize setup, they are automatically deleted after first boot
+#   parted : to expand root partition
+packages=parted
+
+[Config]
+# Packages required by the pi64-config CLI tool
+packages=dialog sysbench wireless-tools
