--- a/goss.yaml
+++ b/goss.yaml
@@ -20,6 +20,8 @@ mount:
 file:
   /dev/vchiq:
     exists: true
+  /etc/apt/sources.list.d/multistrap-debian:
+    exists: false
   /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor:
     exists: true
     contains:
