--- a/goss.yaml
+++ b/goss.yaml
@@ -22,7 +22,7 @@ file:
     exists: true
   /dev/vcio:
     exists: true
-  /etc/apt/sources.list.d/multistrap-debian:
+  /etc/apt/sources.list.d/multistrap-debian.list:
     exists: false
   /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor:
     exists: true
