Move config.txt from the linux tarball to the image
This makes sure custom user configs are not lost when running
pi64-update.

closes #36

--- a/goss.yaml
+++ b/goss.yaml
@@ -29,6 +29,10 @@ command:
       - CONFIG_VIDEO_BCM2835=m
 
 file:
+  /boot/config.txt:
+    exists: true
+    contains:
+      - dtparam=audio=on
   /dev/vchiq:
     exists: true
   /dev/vcio:
